# KGMT

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  test.py  treeSize.csv
NSight/: baseline.nsys-rep  baseline.sqlite  command.md  review.nsys-rep  review.sqlite  review.txt
NSight/KGMT_project/: KGMT_project.ncu-proj
benchmarking/: bench.m
benchmarking/kgmtParallelJetson/12DQuad/house/: executionTime.csv
benchmarking/kgmtParallelJetson/12DQuad/house/ControlPathToGoal/ControlPathToGoal0/: controlPathToGoal.csv
benchmarking/kgmtParallelJetson/12DQuad/narrowPassage/: executionTime.csv
benchmarking/kgmtParallelJetson/12DQuad/trees/: executionTime.csv
benchmarking/kgmtParallelJetson/6DDI/house/: executionTime.csv
benchmarking/kgmtParallelJetson/6DDI/narrowPassage/: executionTime.csv
benchmarking/kgmtParallelJetson/6DDI/trees/: executionTime.csv
benchmarking/kgmtParallelJetson/FlyingUni/house/: executionTime.csv
benchmarking/kgmtParallelJetson/FlyingUni/narrowPassage/: executionTime.csv
benchmarking/kgmtParallelJetson/FlyingUni/trees/: executionTime.csv
benchmarking/results/: kernelTiming.csv
examples/: benchMain.cu  est_cpu.cpp  main.cu
examples/cpu/: est_cpu.cpp  omplParallelBench_cpu.cpp  pdst_cpu.cpp  rrtParallel_cpu.cpp  rrt_cpu.cpp
examples/gpu/: benchMain.cu  executionTimeMain.cu  expectedTreeSizeMain.cu  main.cu  pcBenchMain.cu
include/collisionCheck/: collisionCheck.cuh
include/config/: config.h
include/config/obstacles/: obstacles.csv
include/config/obstacles/house/: obstacles.csv
include/config/obstacles/narrowPassage/: obstacles.csv
include/config/obstacles/pillars/: obstacles.csv
include/cpu/collisionCheck/: CollisionCheck.h
include/cpu/decomposition/: ModGridDecomposition.h
include/cpu/planners/: EST_6DI.h  ModEST.h  ModPDST.h  ModRRT.h  ModSyclop.h  ModSyclopEST.h  OMPL_Planner.h  PDST_6DI.h  RRT_6DI.h
include/graphs/: Graph.cuh
include/helper/: helper.cuh
include/planners/: KGMT.cuh  Planner.cuh
include/statePropagator/: statePropagator.cuh
scripts/: csvFormat.py  maxVals.py
src/collisionCheck/: collisionCheck.cu
src/cpu/collisionCheck/: CollisionCheck.cpp
src/cpu/decomposition/: ModGridDecomposition.cpp
src/cpu/planners/: EST_6DI.cpp  ModEST.cpp  ModPDST.cpp  ModRRT.cpp  ModSyclop.cpp  ModSyclopEST.cpp  OMPL_Planner.cpp  PDST_6DI.cpp  RRT_6DI.cpp
src/graphs/: Graph.cu
src/helper/: helper.cu
src/planners/: KGMT.cu  Planner.cu
src/statePropagator/: statePropagator.cu
viz/: EST_3D_single.m  KGMT_2D.m  KGMT_2D_single.m  KGMT_3D.m  KGMT_3D_ExpansionColor.m  KGMT_3D_GPU.asv  KGMT_3D_GPU.m  KGMT_3D_MultiColor.m  KGMT_3D_single.asv  KGMT_3D_single.m  KGMT_3D_steps.m  KGMT_GoalPath.m  OMPL_3D.m
